fixes footer on firefox

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -18,6 +18,7 @@ footer {
 
 			svg {
 				width: 100%;
+				max-width: 400px;
 
 				text {
 					font-family: inherit;
